WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220556
REGRESSION (
r265044
): [macOS] Safari autocorrects text when typing in login field on amazon.com
https://bugs.webkit.org/show_bug.cgi?id=220556
Summary
REGRESSION (r265044): [macOS] Safari autocorrects text when typing in login f...
Wenson Hsieh
Reported
2021-01-12 12:13:55 PST
<
rdar://problem/71602937
>
Attachments
Patch
(17.83 KB, patch)
2021-01-12 12:25 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-01-12 12:25:35 PST
Created
attachment 417478
[details]
Patch
Darin Adler
Comment 2
2021-01-12 13:34:04 PST
Comment on
attachment 417478
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=417478&action=review
> Source/WebKit/ChangeLog:11 > + Restores the implementation of `WKBundleNodeHandleSetHTMLInputElementSpellcheckEnabled`, which was removed in > +
r265044
, with the reasoning that the code was unused. However, Safari still uses this SPI on macOS to prevent > + automatic spelling correction from triggering when editing form fields that are AutoFillable.
Wow, how did I miss that? Was that the only mistake of the 12 functions that I claimed were unused?
Wenson Hsieh
Comment 3
2021-01-12 13:49:48 PST
Thanks for the review! Yes, this seems to be the only one that is unused. While there are several SPI functions that have call sites in Safari code (more specifically, their C++ wrapper objects), the methods on those wrappers are unused in Safari code as well. (In reply to Darin Adler from
comment #2
)
> Comment on
attachment 417478
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=417478&action=review
> > > Source/WebKit/ChangeLog:11 > > + Restores the implementation of `WKBundleNodeHandleSetHTMLInputElementSpellcheckEnabled`, which was removed in > > +
r265044
, with the reasoning that the code was unused. However, Safari still uses this SPI on macOS to prevent > > + automatic spelling correction from triggering when editing form fields that are AutoFillable. > > Wow, how did I miss that? > > Was that the only mistake of the 12 functions that I claimed were unused?
Wenson Hsieh
Comment 4
2021-01-12 13:50:34 PST
> Yes, this seems to be the only one that is unused.
(I meant to write "only one that is _not_ unused")
EWS
Comment 5
2021-01-12 13:59:47 PST
Committed
r271414
: <
https://trac.webkit.org/changeset/271414
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417478
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug